5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1764_1183.log
== TEST (2019-05-28 16:45:01) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:04) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:14) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:19) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:21) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:41) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:45) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:47) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:54) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:46:56) 
-- CODE:
from numpy import *

x = array(eval(input()))

h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:56:57) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x-1))
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:57:30) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x))
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:58:29) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x, dtype=int))
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:59:12) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = array(A,dtype=int)
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:59:17) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = array(A,dtype=int)
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:00:03) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:00:07) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
e = 0
while h < size(x):
	if x[h] >= 0:
		e += 1
	h += 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:04:07) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1
while A > i:
	if x[i] < 0:
		x[i] += 0
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:04:23) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1
while A > i:
	if x[i] < 0:
		x[i] += 1
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:05:57) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1
while A > i:
	if x[i] < 0:
		x[i] += 0
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:06:18) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1
while A > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:09:18) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1

print(x+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:09:33) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1

print(x+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:09:40) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1

print(x+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:09:45) 
-- CODE:
from numpy import *

x = array(eval(input()))
A = size(x)
a = zeros(A, dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1

print(x+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:19:50) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1	

a = 

while A > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(x)
-- ERROR:
File "XXXX", line 13
    a = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:19:53) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1	

a = 0

while A > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:19:58) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
while A > h:
	if x[h] >= 0:
		e += 1
	h += 1	

a = 0

while A > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:20:09) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		e += 1
	h += 1	

a = 0

while A > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:20:17) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		e += 1
	h += 1	

a = 0

while a > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:23:04) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = 
	h += 1	
while a > i:
	if x[i] < 0:
		x[i] = x[i]*0
	i += 1
print(a)
-- ERROR:
File "XXXX", line 13
    a[i] = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:10) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
while a >= i:
	if x[:
		
	i += 1
print(a)
-- ERROR:
File "XXXX", line 18
    i += 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:10) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
while a >= i:
	if x[:
		
	i += 1
print(a)
-- ERROR:
File "XXXX", line 18
    i += 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:24:52) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
b = zeros(size(e), dtype=int)
while  sized(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:25:05) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
b = zeros(size(e), dtype=int)
while  size(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:25:17) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
b = zeros(size(e), dtype=int)
while  size(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:25:21) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[i] = x[i]
	h += 1
b = zeros(size(e), dtype=int)
while  size(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:25:54) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[h] = x[h]
	h += 1
b = zeros(size(e), dtype=int)
while  size(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:26:00) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0

while size(x) > h:
	if x[h] >= 0:
		e += 1
		a[h] = x[h]
	h += 1
b = zeros(size(e), dtype=int)
while  size(b) > i:
	if a[i] > 0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:32:12) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x), dtype=int)
h = 0
i = 0
e = 0
f = 0
while size(x-1) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1


b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[i] = a[i]
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:34:59) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x - 1))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1

i = 0
f = 0
b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[f] = a[i]
		
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:36:07) 
-- CODE:
from numpy import *

x = array(eval(input()))
a = zeros(size(x - 1))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1

i = 0
f = 0
b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[f] = a[i]
		f += 1
	i += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:36:44) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x - 1))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:37:02) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x - 1))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- EXECUTION TIME:
0.564269
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 0]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:37:08) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  size(b) > i:
	if a[i] > 0.0 :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:40:12) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  (size(b) > i):
	if( a[i] > 0.0) :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:41:15) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  (size(x) > i):
	if( a[i] > 0.0) :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:41:21) 
-- CODE:
from numpy import *
x = array(eval(input()))
a = zeros(size(x))
h = 0
e = 0
while size(x) > h:
	if x[h] >= 0:
		a[h] = x[h]
		e += 1
	h += 1
i = 0
f = 0
b = zeros(e,dtype=int)
while  (size(x) > i):
	if( a[i] > 0.0) :
		b[f] = a[i]
		f += 1
	i += 1
print(b)
-- EXECUTION TIME:
0.462187
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
